@@ -1,6 +1,517 @@
 RELEASE HISTORY
 ===============
 
+0.0.50 (9/25/2015)
+------------------
+
+Release Notes
+~~~~~~~~~~~~~
+
+This release removes the 'global' jvm compile strategy in favor of the 'isolated' strategy and
+switches the default java incremental compilation frontend from jmake to zinc.  If you were using
+'global' and/or jmake you'll have some pants.ini cleanup to do.  You can run the migration tool
+from the `pantsbuild/pants repository <https://github.com/pantsbuild/pants>`_ by cloning the repo
+and running the following command from there against your own repo's pants.ini::
+
+    pantsbuild/pants $ ./pants run migrations/options/src/python:migrate_config -- [path to your repo's pants.ini]
+
+There have been several additional deprecated APIs removed in this release, please review the
+API Changes section below.
+
+API Changes
+~~~~~~~~~~~
+
+* Remove artifacts from JarDependency; Kill IvyArtifact.
+  `RB #2858 <https://rbcommons.com/s/twitter/r/2858>`_
+
+* Kill deprecated `BuildFileAliases.create` method.
+  `RB #2888 <https://rbcommons.com/s/twitter/r/2888>`_
+
+* Remove the deprecated `SyntheticAddress` class.
+  `RB #2886 <https://rbcommons.com/s/twitter/r/2886>`_
+
+* Slim down the API of the Config class and move it to options/.
+  `RB #2865 <https://rbcommons.com/s/twitter/r/2865>`_
+
+* Remove the JVM global compile strategy, switch default java compiler to zinc
+  `RB #2852 <https://rbcommons.com/s/twitter/r/2852>`_
+
+* Support arbitrary expressions in option values.
+  `RB #2860 <https://rbcommons.com/s/twitter/r/2860>`_
+
+Bugfixes
+~~~~~~~~
+
+* Change jar-tool to use CONCAT_TEXT by default for handling duplicates under META-INF/services
+  `RB #2881 <https://rbcommons.com/s/twitter/r/2881>`_
+
+* Upgrade to jarjar 1.6.0.
+  `RB #2880 <https://rbcommons.com/s/twitter/r/2880>`_
+
+* Improve error handling for nailgun client connection attempts
+  `RB #2869 <https://rbcommons.com/s/twitter/r/2869>`_
+
+* Fix Go targets to glob more than '.go' files.
+  `RB #2873 <https://rbcommons.com/s/twitter/r/2873>`_
+
+* Defend against concurrent bootstrap of the zinc compiler interface
+  `RB #2872 <https://rbcommons.com/s/twitter/r/2872>`_
+  `RB #2867 <https://rbcommons.com/s/twitter/r/2867>`_
+  `RB #2866 <https://rbcommons.com/s/twitter/r/2866>`_
+
+* Fix missing underscore, add simple unit test
+  `RB #2805 <https://rbcommons.com/s/twitter/r/2805>`_
+  `RB #2862 <https://rbcommons.com/s/twitter/r/2862>`_
+
+* Fix a protocol bug in `GopkgInFetcher` for v0's.
+  `RB #2857 <https://rbcommons.com/s/twitter/r/2857>`_
+
+New Features
+~~~~~~~~~~~~
+
+* Allow resolving buildcache hosts via a REST service
+  `RB #2815 <https://rbcommons.com/s/twitter/r/2815>`_
+
+* Implement profiling inside pants.
+  `RB #2885 <https://rbcommons.com/s/twitter/r/2885>`_
+
+* Adds a new CONCAT_TEXT rule to jar tool to handle text files that might be missing the last newline.
+  `RB #2875 <https://rbcommons.com/s/twitter/r/2875>`_
+
+Small improvements, Refactoring and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Enable Future compatibility style checks
+  `RB #2884 <https://rbcommons.com/s/twitter/r/2884>`_
+
+* Fix another scoped option issue in the test harnesses
+  `RB #2850 <https://rbcommons.com/s/twitter/r/2850>`_
+  `RB #2870 <https://rbcommons.com/s/twitter/r/2870>`_
+
+* Fix go_local_source_test_base.py for OSX.
+  `RB #2882 <https://rbcommons.com/s/twitter/r/2882>`_
+
+* Fix javadocs and add jvm doc gen to CI.
+  `Issue #65 <https://github.com/pantsbuild/pants/issues/65>`_
+  `RB #2877 <https://rbcommons.com/s/twitter/r/2877>`_
+
+* Fixup release dry runs; use isolated plugin cache.
+  `RB #2874 <https://rbcommons.com/s/twitter/r/2874>`_
+
+* Fix scoped options initialization in test
+  `RB #2815 <https://rbcommons.com/s/twitter/r/2815>`_
+  `RB #2850 <https://rbcommons.com/s/twitter/r/2850>`_
+
+0.0.49 (9/21/2015)
+------------------
+
+Release Notes
+~~~~~~~~~~~~~
+
+This is a hotfix release that includes a fix for resolving remote go libraries
+that use relative imports.
+
+Bugfixes
+~~~~~~~~
+
+* Include resolved jar versions in compile fingerprints; ensure coordinates match artifacts.
+  `RB #2853 <https://rbcommons.com/s/twitter/r/2853>`_
+
+* Fixup GoFetch to handle relative imports.
+  `RB #2854 <https://rbcommons.com/s/twitter/r/2854>`_
+
+New Features
+~~~~~~~~~~~~
+
+* Enhancements to the dep-usage goal
+  `RB #2851 <https://rbcommons.com/s/twitter/r/2851>`_
+
+0.0.48 (9/18/2015)
+------------------
+
+Release Notes
+~~~~~~~~~~~~~
+
+There is a new UI in the `./pants server` web interface that shows 'Timing Stats' graphs.  These
+graphs show where time is spent on a daily-aggregation basis in various tasks.  You can drill down
+into a task to see which sub-steps are most expensive.  Try it out!
+
+We also have a few new metadata goals to help figure out what's going on with file ownership and
+options.
+
+If you want to find out where options are coming from, the `options` goal can help you out::
+
+    $ ./pants -q options --only-overridden --scope=compile
+    compile.apt.jvm_options = ['-Xmx1g', '-XX:MaxPermSize=256m'] (from CONFIG in pants.ini)
+    compile.java.jvm_options = ['-Xmx2G'] (from CONFIG in pants.ini)
+    compile.java.partition_size_hint = 1000000000 (from CONFIG in pants.ini)
+    compile.zinc.jvm_options = ['-Xmx2g', '-XX:MaxPermSize=256m', '-Dzinc.analysis.cache.limit=0'] (from CONFIG in pants.ini)
+
+If you're not sure which target(s) own a given file::
+
+    $ ./pants -q list-owners -- src/python/pants/base/target.py
+    src/python/pants/base:target
+
+The latter comes from new contributor Tansy Arron-Walker.
+
+API Changes
+~~~~~~~~~~~
+
+* Kill 'ivy_jar_products'.
+  `RB #2823 <https://rbcommons.com/s/twitter/r/2823>`_
+
+* Kill 'ivy_resolve_symlink_map' and 'ivy_cache_dir' products.
+  `RB #2819 <https://rbcommons.com/s/twitter/r/2819>`_
+
+Bugfixes
+~~~~~~~~
+
+* Upgrade to jarjar 1.5.2.
+  `RB #2847 <https://rbcommons.com/s/twitter/r/2847>`_
+
+* Don't modify globs excludes argument value.
+  `RB #2841 <https://rbcommons.com/s/twitter/r/2841>`_
+
+* Whitelist the appropriate filter option name for zinc
+  `RB #2839 <https://rbcommons.com/s/twitter/r/2839>`_
+
+* Ensure stale classes are removed during isolated compile by cleaning classes directory prior to handling invalid targets
+  `RB #2805 <https://rbcommons.com/s/twitter/r/2805>`_
+
+* Fix `linecount` estimator for `dep-usage` goal
+  `RB #2828 <https://rbcommons.com/s/twitter/r/2828>`_
+
+* Fix resource handling for the python backend.
+  `RB #2817 <https://rbcommons.com/s/twitter/r/2817>`_
+
+* Fix coordinates of resolved jars in IvyInfo.
+  `RB #2818 <https://rbcommons.com/s/twitter/r/2818>`_
+
+* Fix `NailgunExecutor` to support more than one connect attempt
+  `RB #2822 <https://rbcommons.com/s/twitter/r/2822>`_
+
+* Fixup AndroidIntegrationTest broken by Distribution refactor.
+  `RB #2811 <https://rbcommons.com/s/twitter/r/2811>`_
+
+* Backport sbt java output fixes into zinc
+  `RB #2810 <https://rbcommons.com/s/twitter/r/2810>`_
+
+* Align ivy excludes and ClasspathProducts excludes.
+  `RB #2807 <https://rbcommons.com/s/twitter/r/2807>`_
+
+New Features
+~~~~~~~~~~~~
+
+* A nice timing stats report.
+  `RB #2825 <https://rbcommons.com/s/twitter/r/2825>`_
+
+* Add new console task ListOwners to determine the targets that own a source
+  `RB #2755 <https://rbcommons.com/s/twitter/r/2755>`_
+
+* Adding a console task to explain where options came from.
+  `RB #2816 <https://rbcommons.com/s/twitter/r/2816>`_
+
+Small improvements, Refactoring and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Deprecate 'Repository' alias in favor of 'repo'.
+  `RB #2845 <https://rbcommons.com/s/twitter/r/2845>`_
+
+* Fix indents (checkstyle)
+  `RB #2844 <https://rbcommons.com/s/twitter/r/2844>`_
+
+* Use list comprehension in jvm_compile to calculate valid targets
+  `RB #2843 <https://rbcommons.com/s/twitter/r/2843>`_
+
+* Transition `IvyImports` to 'compile_classpath'.
+  `RB #2840 <https://rbcommons.com/s/twitter/r/2840>`_
+
+* Migrate `JvmBinaryTask` to 'compile_classpath'.
+  `RB #2832 <https://rbcommons.com/s/twitter/r/2832>`_
+
+* Add support for snapshotting `ClasspathProducts`.
+  `RB #2837 <https://rbcommons.com/s/twitter/r/2837>`_
+
+* Bump to zinc 1.0.11
+  `RB #2827 <https://rbcommons.com/s/twitter/r/2827>`_
+  `RB #2836 <https://rbcommons.com/s/twitter/r/2836>`_
+  `RB #2812 <https://rbcommons.com/s/twitter/r/2812>`_
+
+* Lazily load zinc analysis
+  `RB #2827 <https://rbcommons.com/s/twitter/r/2827>`_
+
+* Add support for whitelisting of zinc options
+  `RB #2835 <https://rbcommons.com/s/twitter/r/2835>`_
+
+* Kill the unused `JvmTarget.configurations` field.
+  `RB #2834 <https://rbcommons.com/s/twitter/r/2834>`_
+
+* Kill 'jvm_build_tools_classpath_callbacks' deps.
+  `RB #2831 <https://rbcommons.com/s/twitter/r/2831>`_
+
+* Add `:scalastyle_integration` test to `:integration` test target
+  `RB #2830 <https://rbcommons.com/s/twitter/r/2830>`_
+
+* Use fast_relpath in JvmCompileIsolatedStrategy.compute_classes_by_source
+  `RB #2826 <https://rbcommons.com/s/twitter/r/2826>`_
+
+* Enable New Style class check
+  `RB #2820 <https://rbcommons.com/s/twitter/r/2820>`_
+
+* Remove `--quiet` flag from `pip`
+  `RB #2809 <https://rbcommons.com/s/twitter/r/2809>`_
+
+* Move AptCompile to zinc
+  `RB #2806 <https://rbcommons.com/s/twitter/r/2806>`_
+
+* Add a just-in-time check of the artifact cache to the isolated compile strategy
+  `RB #2690 <https://rbcommons.com/s/twitter/r/2690>`_
+
+0.0.47 (9/11/2015)
+------------------
+
+Release Notes
+~~~~~~~~~~~~~
+
+By defaulting the versions of most built-in tools, this release makes pants significantly easier to configure! Tools like antlr, jmake, nailgun, etc, will use default classpaths unless override targets are provided.
+
+Additionally, this release adds native support for shading JVM binaries, which helps to isolate them from their deployment environment.
+
+Thanks to all contributors!
+
+API Changes
+~~~~~~~~~~~
+
+* Add JVM distributions and platforms to the export format.
+  `RB #2784 <https://rbcommons.com/s/twitter/r/2784>`_
+
+* Added Python setup to export goal to consume in the Pants Plugin for IntelliJ.
+  `RB #2785 <https://rbcommons.com/s/twitter/r/2785>`_
+  `RB #2786 <https://rbcommons.com/s/twitter/r/2786>`_
+
+* Introduce anonymous targets built by macros.
+  `RB #2759 <https://rbcommons.com/s/twitter/r/2759>`_
+
+* Upgrade to the re-merged Node.js/io.js as the default.
+  `RB #2800 <https://rbcommons.com/s/twitter/r/2800>`_
+
+Bugfixes
+~~~~~~~~
+
+* Don't create directory entries in the isolated compile context jar
+  `RB #2775 <https://rbcommons.com/s/twitter/r/2775>`_
+
+* Bump jar-tool release version to 0.0.7 to pick up double-slashed directory fixes
+  `RB #2763 <https://rbcommons.com/s/twitter/r/2763>`_
+  `RB #2779 <https://rbcommons.com/s/twitter/r/2779>`_
+
+* junit_run now parses errors (in addition to failures) to correctly set failing target
+  `RB #2782 <https://rbcommons.com/s/twitter/r/2782>`_
+
+* Fix the zinc name-hashing flag for unicode symbols
+  `RB #2776 <https://rbcommons.com/s/twitter/r/2776>`_
+
+New Features
+~~~~~~~~~~~~
+
+* Support for shading rules for jvm_binary.
+  `RB #2754 <https://rbcommons.com/s/twitter/r/2754>`_
+
+* Add support for @fromfile option values.
+  `RB #2783 <https://rbcommons.com/s/twitter/r/2783>`_
+  `RB #2794 <https://rbcommons.com/s/twitter/r/2794>`_
+
+* --config-override made appendable, to support multiple pants.ini files.
+  `RB #2774 <https://rbcommons.com/s/twitter/r/2774>`_
+
+* JVM tools can now carry their own classpath, meaning that most don't need to be configured
+  `RB #2778 <https://rbcommons.com/s/twitter/r/2778>`_
+  `RB #2795 <https://rbcommons.com/s/twitter/r/2795>`_
+
+Small improvements, Refactoring and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Added migration of --jvm-jdk-paths to --jvm-distributions-paths
+  `RB #2677 <https://rbcommons.com/s/twitter/r/2677>`_
+  `RB #2781 <https://rbcommons.com/s/twitter/r/2781>`_
+
+* Example of problem with annotation processors that reference external dependencies.
+  `RB #2777 <https://rbcommons.com/s/twitter/r/2777>`_
+
+* Replace eval use with a parse_literal util.
+  `RB #2787 <https://rbcommons.com/s/twitter/r/2787>`_
+
+* Move Shader from pants.java to the jvm backend.
+  `RB #2788 <https://rbcommons.com/s/twitter/r/2788>`_
+
+* Move BuildFileAliases validation to BuildFileAliases.
+  `RB #2790 <https://rbcommons.com/s/twitter/r/2790>`_
+
+* Centralize finding target types for an alias.
+  `RB #2796 <https://rbcommons.com/s/twitter/r/2796>`_
+
+* Store timing stats in a structured way, instead of as json.
+  `RB #2797 <https://rbcommons.com/s/twitter/r/2797>`_
+
+Documentation
+~~~~~~~~~~~~~
+
+* Added a step to publish RELEASE HISTORY back to the public website [DOC]
+  `RB #2780 <https://rbcommons.com/s/twitter/r/2780>`_
+
+* Fix buildcache doc typos, use err param rather than ignoring it in UnreadableArtifact
+  `RB #2801 <https://rbcommons.com/s/twitter/r/2801>`_
+
+0.0.46 (9/4/2015)
+-----------------
+
+Release Notes
+~~~~~~~~~~~~~
+
+This release includes more support for Node.js!
+
+Support for the environment variables `PANTS_VERBOSE` and `PANTS_BUILD_ROOT` have been removed in
+this release.  Instead, use `--level` to turn on debugging in pants.  Pants recursively searches from
+the current directory to the root directory until it finds the `pants.ini` file in order to find
+the build root.
+
+The `pants()` syntax in BUILD files has been removed (deprecated since 0.0.29).
+
+API Changes
+~~~~~~~~~~~
+
+* Kill PANTS_VERBOSE and PANTS_BUILD_ROOT.
+  `RB #2760 <https://rbcommons.com/s/twitter/r/2760>`_
+
+* [classpath products] introduce ResolvedJar and M2Coordinate and use them for improved exclude handling
+  `RB #2654 <https://rbcommons.com/s/twitter/r/2654>`_
+
+* Kill the `pants()` pointer, per discussion in Slack: https://pantsbuild.slack.com/archives/general/p1440451305004760
+  `RB #2650 <https://rbcommons.com/s/twitter/r/2650>`_
+
+* Make Globs classes and Bundle stand on their own.
+  `RB #2740 <https://rbcommons.com/s/twitter/r/2740>`_
+
+* Rid all targets of sources_rel_path parameters.
+  `RB #2738 <https://rbcommons.com/s/twitter/r/2738>`_
+
+* Collapse SyntheticAddress up into Address. [API]
+  `RB #2730 <https://rbcommons.com/s/twitter/r/2730>`_
+
+Bugfixes
+~~~~~~~~
+
+* Fix + test 3rd party missing dep for zinc
+  `RB #2764 <https://rbcommons.com/s/twitter/r/2764>`_
+
+* Implement a synthetic jar that sets Class-Path to bypass ARG_MAX limit
+  `RB #2672 <https://rbcommons.com/s/twitter/r/2672>`_
+
+* Fixed changed goal for BUILD files in build root
+  `RB #2749 <https://rbcommons.com/s/twitter/r/2749>`_
+
+* Refactor / bug-fix for checking jars during dep check
+  `RB #2739 <https://rbcommons.com/s/twitter/r/2739>`_
+
+* PytestRun test failures parsing is broken for tests in a class
+  `RB #2714 <https://rbcommons.com/s/twitter/r/2714>`_
+
+* Make nailgun_client error when the client socket is closed.
+  `RB #2727 <https://rbcommons.com/s/twitter/r/2727>`_
+
+New Features
+~~~~~~~~~~~~
+
+* Initial support for `resolve.npm`.
+  `RB #2723 <https://rbcommons.com/s/twitter/r/2723>`_
+
+* Add support for `repl.node`.
+  `RB #2766 <https://rbcommons.com/s/twitter/r/2766>`_
+
+* Setup the node contrib for release.
+  `RB #2768 <https://rbcommons.com/s/twitter/r/2768>`_
+
+* Add annotation processor settings to goal idea
+  `RB #2753 <https://rbcommons.com/s/twitter/r/2753>`_
+
+* Introduce job prioritization to ExecutionGraph
+  `RB #2601 <https://rbcommons.com/s/twitter/r/2601>`_
+
+* Provide include paths to thrift-linter to allow for more complex checks
+  `RB #2712 <https://rbcommons.com/s/twitter/r/2712>`_
+
+* JVM dependency usage task
+  `RB #2757 <https://rbcommons.com/s/twitter/r/2757>`_
+
+Small improvements, Refactoring and Tooling
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+* Re-work REPL mutual exclusion.
+  `RB #2765 <https://rbcommons.com/s/twitter/r/2765>`_
+
+* Return cached_chroots instead of yielding them.
+  `RB #2762 <https://rbcommons.com/s/twitter/r/2762>`_
+
+* Normalize and decompose GoalRunner initialization and setup
+  `RB #2715 <https://rbcommons.com/s/twitter/r/2715>`_
+
+* Fixed pre-commit hook for CI
+  `RB #2758 <https://rbcommons.com/s/twitter/r/2758>`_
+
+* Code added check valid arguments for glob, test added as well
+  `RB #2750 <https://rbcommons.com/s/twitter/r/2750>`_
+
+* Fix newline style nits and enable newline check in pants.ini
+  `RB #2756 <https://rbcommons.com/s/twitter/r/2756>`_
+
+* Add the class name and scope name to the uninitialized subsystem error message
+  `RB #2698 <https://rbcommons.com/s/twitter/r/2698>`_
+
+* Make nailgun killing faster.
+  `RB #2685 <https://rbcommons.com/s/twitter/r/2685>`_
+
+* Switch JVM missing dep detection to use compile_classpath
+  `RB #2729 <https://rbcommons.com/s/twitter/r/2729>`_
+
+* Add transitive flag to ClasspathProduct.get_for_target[s]
+  `RB #2744 <https://rbcommons.com/s/twitter/r/2744>`_
+
+* Add transitive parameter to UnionProducts.get_for_target[s]
+  `RB #2741 <https://rbcommons.com/s/twitter/r/2741>`_
+
+* Tighten up the node target hierarchy.
+  `RB #2736 <https://rbcommons.com/s/twitter/r/2736>`_
+
+* Ensure pipeline failuires fail CI.
+  `RB #2731 <https://rbcommons.com/s/twitter/r/2731>`_
+
+* Record the BUILD target alias in BuildFileAddress.
+  `RB #2726 <https://rbcommons.com/s/twitter/r/2726>`_
+
+* Use BaseCompileIT to double-check missing dep failure and whitelist success.
+  `RB #2732 <https://rbcommons.com/s/twitter/r/2732>`_
+
+* Use Target.subsystems to expose UnknownArguments.
+  `RB #2725 <https://rbcommons.com/s/twitter/r/2725>`_
+
+* Populate classes_by_target using the context jar for the isolated strategy
+  `RB #2720 <https://rbcommons.com/s/twitter/r/2720>`_
+
+* Push OSX CI's over to pantsbuild-osx.
+  `RB #2724 <https://rbcommons.com/s/twitter/r/2724>`_
+
+Documentation
+~~~~~~~~~~~~~
+
+* Update a few references to options moved to the jvm subsystem in docs and comments
+  `RB #2751 <https://rbcommons.com/s/twitter/r/2751>`_
+
+* Update developer docs mention new testing idioms
+  `RB #2743 <https://rbcommons.com/s/twitter/r/2743>`_
+
+* Clarify the RBCommons/pants-reviews setup step.
+  `RB #2733 <https://rbcommons.com/s/twitter/r/2733>`_
+
 0.0.45 (8/28/2015)
 -------------------
 
